--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ argon2-cffi==20.1.0
 async-generator==1.10
 attrs==20.2.0
 backcall==0.2.0
+beautifulsoup4==4.9.3
 bleach==3.2.1
 certifi==2020.6.20
 cffi==1.14.3
+cftime==1.3.0
 chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.2
@@ -32,7 +34,9 @@ nbclient==0.5.1
 nbconvert==6.0.7
 nbformat==5.0.8
 nest-asyncio==1.4.1
+netCDF4==1.5.4
 notebook==6.1.4
+numexpr==2.7.1
 numpy==1.19.2
 packaging==20.4
 pandas==1.1.3
@@ -44,6 +48,7 @@ pickleshare==0.7.5
 Pillow==8.0.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.8
+protobuf==3.14.0
 ptyprocess==0.6.0
 pvlib==0.8.0
 pycparser==2.20
@@ -58,8 +63,11 @@ QtPy==1.9.0
 requests==2.24.0
 scipy==1.5.3
 Send2Trash==1.5.0
+siphon==0.8.0
 six==1.15.0
+soupsieve==2.0.1
 statsmodels==0.12.0
+tables==3.6.1
 terminado==0.9.1
 testpath==0.4.4
 tornado==6.0.4
