Graficas e indices de error dec9

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@ env_pvlib_tesis
 *.xls
 *.csv
 *.xlsx
+
+# Created by https://www.toptal.com/developers/gitignore/api/vscode
+# Edit at https://www.toptal.com/developers/gitignore?templates=vscode
+
+### vscode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+*.vscode/
